--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Mon site à moi pour vous</title>
+    <title>Mon site de présentation</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
   </head>
   <body>
@@ -12,7 +12,7 @@
 
 <style>
   a {
-    color: #fe8d31;
+    color: #0055ff;
   }
 </style>
 
@@ -23,9 +23,9 @@
         <img class="rounded-circle img-fluid" src="https://jsginko.github.io/images/moi.png" alt="Profile Photo" />
       </div>
       <div class="col-md-9">
-        <h1> Moi toujours moi</h1>
-        <h5> à la recherche du temps perdu</h5>
-        <p class="border-top pt-3">Je parle déjà trop donc je n'ai plus rien à raconter ici.</p>
+        <h1> Théo JOSEPH</h1>
+        <h5> Étudiant en troisième année d'économie à l'Université de Tours</h5>
+        <p class="border-top pt-3">Actuellemnt en recherche d'un master dans le domaine économique.</p>
       </div>
     </div>
   </div>
