--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ s<!DOCTYPE html>
       <div class="col-md-9">
         <h1> Théo JOSEPH</h1>
         <h5> Étudiant en troisième année d'économie à l'Université de Tours</h5>
-        <p class="border-top pt-3">Actuellemnt en recherche d'un master dans le domaine économique.</p>
+        <p class="border-top pt-3">Actuellement en recherche d'un master dans le domaine économique.</p>
       </div>
     </div>
   </div>
@@ -82,7 +82,7 @@ s<!DOCTYPE html>
     </div>
     <div class="col-md mb-5">
      <!-- education -->
-     <h2 class="mb-5">Mon temps</h2>
+     <h2 class="mb-5">Présentation</h2>
 <ul>
   <li>
     <h6 class="text-danger">Jusqu'à mardi 12 mars 2024</h6>
