--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ s<!DOCTYPE html>
   <div class="container">
     <div class="row">
       <div class="col-md-3 text-left text-md-center mb-3">
-        <img class="rounded-circle img-fluid" src="https://jsginko.github.io/images/moi.png" alt="Profile Photo" />
+        <img class="rounded-circle img-fluid" src="https://github.com/TheoJosephPro/TheoJosephPro.github.io/blob/main/GAs_LX4WcAAscgw.jpg" alt="Profile Photo" />
       </div>
       <div class="col-md-9">
         <h1> Théo JOSEPH</h1>
