--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ s<!DOCTYPE html>
 <ul>
   <li>
     <h6 class="text-danger">Tutoriel de création de site web simple</h6>
-    <p>Ça se trouve par <a href="https://jsginko.github.io/tuto_page_web.html">ici</a></p>
+    <p>Ça se trouve par <a href="https://TheoJosephPro.github.io/script_dossier_Bastien_Th%C3%A9o_Illan.html">ici</a></p>
   </li>
   <li>
     <h6 class="text-danger">TP de logiciel R en L2</h6>
