--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@ s<!DOCTYPE html>
         <img class="rounded-circle img-fluid" src="https://raw.githubusercontent.com/TheoJosephPro/TheoJosephPro.github.io/main/GAs_LX4WcAAscgw.jpg" alt="Profile Photo" />
       </div>
       <div class="col-md-9">
-        <h1> Théo JOSEPH</h1>
-        <h5> Étudiant en troisième année d'économie à l'Université de Tours</h5>
-        <p class="border-top pt-3">Actuellement en recherche d'un master dans le domaine économique.</p>
+        <h1>Théo JOSEPH</h1>
+        <h5>Le temps de la réflexion est une économie de temps". - Publius Syrus</h5>
+        <p class="border-top pt-3">Étudiant en troisième année d'économie à l'Université de Tours et actuellement en recherche d'un master dans le domaine économique.</p>
       </div>
     </div>
   </div>
@@ -64,8 +64,8 @@ s<!DOCTYPE html>
      <h2 class="mb-5">Mes projets</h2>
 <ul>
   <li>
-    <h6 class="text-danger">Tutoriel de création de site web simple</h6>
-    <p>Ça se trouve par <a href="https://TheoJosephPro.github.io/script_dossier_Bastien_Th%C3%A9o_Illan.html">ici</a></p>
+    <h6 class="text-danger">Etude sur les votes en Indre et Loire</h6>
+    <p>Ceci est un projet sur R créé en 3ème année de licence : <a href="https://TheoJosephPro.github.io/script_dossier_Bastien_Th%C3%A9o_Illan.html"></a></p>
   </li>
   <li>
     <h6 class="text-danger">TP de logiciel R en L2</h6>
