--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ s<!DOCTYPE html>
       </div>
       <div class="col-md-9">
         <h1>Théo JOSEPH</h1>
-        <h5>Le temps de la réflexion est une économie de temps". - Publius Syrus</h5>
+        <h5>'Le temps de la réflexion est une économie de temps'. - Publius Syrus</h5>
         <p class="border-top pt-3">Étudiant en troisième année d'économie à l'Université de Tours et actuellement en recherche d'un master dans le domaine économique.</p>
       </div>
     </div>
@@ -65,7 +65,7 @@ s<!DOCTYPE html>
 <ul>
   <li>
     <h6 class="text-danger">Etude sur les votes en Indre et Loire</h6>
-    <p>Ceci est un projet sur R créé en 3ème année de licence : <a href="https://TheoJosephPro.github.io/script_dossier_Bastien_Th%C3%A9o_Illan.html"></a></p>
+    <p>Retrouvez un projet sur R créé en 3ème année de licence : <a href="https://TheoJosephPro.github.io/script_dossier_Bastien_Th%C3%A9o_Illan.html"></a>juste ici</p>
   </li>
   <li>
     <h6 class="text-danger">TP de logiciel R en L2</h6>
