--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ s<!DOCTYPE html>
   }
 </style>
 
-<header class="p-3 mb-2 bg-secondary text-white">.bg-secondary.bg-gradient
+<header class="bg-secondary-gradient text-white py-5"> 
   <div class="container">
     <div class="row">
       <div class="col-md-3 text-left text-md-center mb-3">
