--- a/index.html
+++ b/index.html
@@ -86,12 +86,8 @@ s<!DOCTYPE html>
      <h2 class="mb-5">Présentation</h2>
 <ul>
   <li>
-    <h6 class="text-danger">Jusqu'à mardi 12 mars 2024</h6>
-    <p>J'ai mené une vie tranquille.</p>
-  </li>
-  <li>
-    <h6 class="text-danger">Mercredi 13 mars 2024</h6>
-    <p>J'ai perdu une journée ensolleillée à écrire un tutoriel pour que mes étudiantes et étudiants de L3 mettent en avant leur travail et me quittent pour un master hors de Tours. En plus je n'ai toujours pas corrigé le contrôle de stat des L3. </p>
+    <h6 class="text-danger">Mon CV</h6>
+    <p>Accessible juste ici</p>
   </li>
 </ul>
     </div>
