--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ s<!DOCTYPE html>
   }
 </style>
 
-<header class="bg-primary bg-secondary text-white py-5"> 
+<header class="bg-danger bg-primary text-white py-5"> 
   <div class="container">
     <div class="row">
       <div class="col-md-3 text-left text-md-center mb-3">
@@ -25,6 +25,7 @@ s<!DOCTYPE html>
       <div class="col-md-9">
         <h1>Théo JOSEPH</h1>
         <h5>'Le temps de la réflexion est une économie de temps'. - Publius Syrus</h5>
+         <p style="font-size:30px">&#8986;</p>
         <p class="border-top pt-3">Étudiant en troisième année d'économie à l'Université de Tours et en recherche de master dans le domaine économique, informatique et/ou environnemental. Bonne visite à vous!</p>
       </div>
     </div>
