--- a/index.html
+++ b/index.html
@@ -16,15 +16,16 @@ s<!DOCTYPE html>
   }
 </style>
 
-<header class="bg-primary bg-gradient text-white py-5"> 
+<header class="bg-primary bg-gradient text-white py-5">
   <div class="container">
-    <div class="row">
-      <div class="col-md-3 text-left text-md-center mb-3">
-        <img class="rounded-circle img-fluid" src="https://github.com/TheoJosephPro/TheoJosephPro.github.io/blob/main/Images/GAs_LX4WcAAscgw.jpg" alt="Profile Photo" />
+    <div class="row align-items-center">
+      <div class="col-md-3 text-center mb-3 mb-md-0">
+        <img class="rounded-circle" style="max-width: 100%; height: auto;" src="https://raw.githubusercontent.com/TheoJosephPro/TheoJosephPro.github.io/main/Images/GAs_LX4WcAAscgw.jpg" alt="Profile Photo" />
       </div>
       <div class="col-md-9">
         <h1>Théo JOSEPH</h1>
-        <h5>'Le temps de la réflexion est une économie de temps'. - Publius Syrus</h5><p style="font-size:20px">&#8986;</p>
+        <h5>'Le temps de la réflexion est une économie de temps'. - Publius Syrus</h5>
+        <p style="font-size:20px">&#8986;</p>
         <p class="border-top pt-3">Étudiant en troisième année d'économie à l'Université de Tours et en recherche de master dans le domaine économique, informatique et/ou environnemental. Bonne visite à vous!</p>
       </div>
     </div>
