--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@ s<!DOCTYPE html>
       </div>
       <div class="col-md-9">
         <h1>Théo JOSEPH<h1>
-        <h5>'Le temps de la réflexion est une économie de temps'. - Publius Syrus</h5>
-        <p style="font-size:20px">&#8987;</p>
+        <h5>'Le temps de la réflexion est une économie de temps'. - Publius Syrus style="font-size:20px">&#8987;</h5>
         <p class="border-top pt-3">Étudiant en troisième année d'économie à l'Université de Tours et en recherche de master dans le domaine économique, informatique et/ou environnemental. Bonne visite à vous!</p>
       </div>
     </div>
