--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ s<!DOCTYPE html>
   <li>
     <h6 class="text-danger">Etude sur les votes en Indre et Loire</h6>
     <p>Retrouvez un projet sur R créé en 3ème année de licence 
-    <a href="https://TheoJosephPro.github.io/script_dossier_Bastien_Th%C3%A9o_Illan.html"></a>juste ici</p>
+    <a href="https://github.com/TheoJosephPro/TheoJosephPro.github.io/blob/main/script_dossier_Bastien_Th%C3%A9o_Illan.html"></a>juste ici</p>
   </li>
   <li>
     <h6 class="text-danger">TP de logiciel R en L2</h6>
