--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <li>
     <h6 class="text-danger">Etude sur les votes en Indre et Loire</h6>
     <p>Retrouvez un projet sur R créé en 3ème année de licence 
-    <a href="https://TheoJosephPro.github.io/script_dossier_Bastien_Th%C3%A9o_Illan.html">juste ici</a></p>
+    <a href="https://TheoJosephPro.github.io/script_dossier_Bastien_Théo_Illan.html">juste ici</a></p>
   </li>
   <li>
     <h6 class="text-danger">TP de logiciel R en L2</h6>
