--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-3 text-left text-md-center mb-3">
-        <img class="rounded-circle img-fluid" src="https://TheoJosephPro.github.io//Images/Photo_CV_site.jpg" alt="Profile Photo" />
+        <img class="rounded-circle img-fluid" src="https://TheoJosephPro.github.io//Images/PhotoCVSite.jpg" alt="Profile Photo" />
       </div>
       <div class="col-md-9">
         <h1>Théo JOSEPH<h1>
@@ -89,7 +89,8 @@
 <ul>
   <li>
     <h6 class="text-danger">Mon CV</h6>
-    <p>Accessible juste ici</p>
+    <p>Accessible
+    <a href="https://TheoJosephPro.github.io/CV master JOSEPH Théo.pdf"></a>juste ici</p>
   </li>
 </ul>
     </div>
