--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <li>
     <h6 class="text-danger">Mon CV</h6>
     <p>Accessible
-    <a href="https://TheoJosephPro.github.io/CV master JOSEPH Théo.pdf"></a>juste ici</p>
+    <a href="https://TheoJosephPro.github.io/CV master JOSEPH Théo.pdf">juste ici</a></p>
   </li>
 </ul>
     </div>
