--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
       <div class="col-md-9">
         <h1>Théo JOSEPH<h1>
-        <h5>'Le temps de la réflexion est une économie de temps'. - Publius Syrus</h5>
+        <h5>"Celui qui ne connaît pas l'histoire est condamné à la revivre". - Karl Marx</h5>
         <p class="border-top pt-3">Étudiant en troisième année d'économie à l'Université de Tours et en recherche de master dans le domaine économique, informatique et/ou environnemental. Bonne visite à vous!</p>
       </div>
     </div>
