--- a/index.html
+++ b/index.html
@@ -68,7 +68,14 @@
   <li>
     <h6 class="text-danger">Etude sur les votes en Indre et Loire</h6>
     <p>Retrouvez un projet sur R créé en 3ème année de licence 
-    <a href="https://TheoJosephPro.github.io/script_dossier_Bastien_Théo_Illan.html">juste ici</a></p>
+    <a href="https://TheoJosephPro.github.io/script_dossier_Bastien_Théo_Illan.html">juste ici</a>.</p>
+  </li>
+</ul>
+<ul>
+  <li>
+    <h6 class="text-danger">Etude de l'impact de la musique sur la santé mentale</h6>
+    <p>Disponible en cliquant
+    <a href="https://TheoJosephPro.github.io/Projet R BARTHELEMY CALLEGARI JOSEPH.Rmd">ici</a>.</p>
   </li>
 </ul>
     </div>
