--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <li>
     <h6 class="text-danger">Etude de l'impact de la musique sur la santé mentale</h6>
     <p>Disponible en cliquant
-    <a href="https://TheoJosephPro.github.io/Projet R BARTHELEMY CALLEGARI JOSEPH.Rmd">ici</a>.</p>
+    <a href="https://TheoJosephPro.github.io/Projet-R-BARTHELEMY-CALLEGARI-JOSEPH.html">ici</a>.</p>
   </li>
 </ul>
     </div>
