--- a/Projet-R-BARTHELEMY-CALLEGARI-JOSEPH.html
+++ b/Projet-R-BARTHELEMY-CALLEGARI-JOSEPH.html
@@ -3001,9 +3001,9 @@ border-radius: 0px;
 quelle mesure les habitudes d’écoute musicale (fréquence et genres
 écoutés) influencent-elles la santé mentale auto-déclarée chez les
 individus (anxiété, dépression, insomnie et TOC) ?</span></h1>
-<h4 class="author">Bastien BARTHÉLÉMY<br />
-Illan CALLEGARI<br />
-Théo JOSEPH</h4>
+<h4 class="author">BARTHÉLÉMY Bastien<br />
+JOSEPH Théo<br />
+CALLEGARI Illan</h4>
 
 </div>
 
