--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="col-md-9">
         <h1>Théo JOSEPH<h1>
         <h5>"Celui qui ne connaît pas l'histoire est condamné à la revivre". - Karl Marx</h5>
-        <p class="border-top pt-3">Étudiant en troisième année d'économie à l'Université de Tours et en recherche de master dans le domaine économique, informatique et/ou environnemental. Bonne visite à vous !</p>
+        <p class="border-top pt-3">Étudiant en première année de master économie appliquée - parcours N4E, à l'université d'Angers. Bonne visite à vous !</p>
       </div>
     </div>
   </div>
@@ -53,7 +53,7 @@
           <path d="M8.211 2.047a.5.5 0 0 0-.422 0l-7.5 3.5a.5.5 0 0 0 .025.917l7.5 3a.5.5 0 0 0 .372 0L14 7.14V13a1 1 0 0 0-1 1v2h3v-2a1 1 0 0 0-1-1V6.739l.686-.275a.5.5 0 0 0 .025-.917z"/>
           <path d="M4.176 9.032a.5.5 0 0 0-.656.327l-.5 1.7a.5.5 0 0 0 .294.605l4.5 1.8a.5.5 0 0 0 .372 0l4.5-1.8a.5.5 0 0 0 .294-.605l-.5-1.7a.5.5 0 0 0-.656-.327L8 10.466z"/>
         </svg>
-        <a href="https://www.univ-tours.fr" class="text-white ml-2">Site de mon université</a>
+        <a href="https://formations.univ-angers.fr/fr/offre-de-formation/master-lmd-MLMD/droit-economie-gestion-DEG/master-economie-appliquee-KV15SCBH/parcours-nouveaux-environnements-economiques-et-entrepreneuriat-ethique-KWYYUJ1C.html" class="text-white ml-2">Détails du master</a>
       </div>
     </div>
   </div>
