--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="col-md-9">
         <h1>Théo JOSEPH<h1>
         <h5>"Celui qui ne connaît pas l'histoire est condamné à la revivre". - Karl Marx</h5>
-        <p class="border-top pt-3">Étudiant en première année de master économie appliquée - parcours N4E, à l'université d'Angers. Bonne visite à vous !</p>
+        <p class="border-top pt-3">Étudiant en première année de master économie appliquée parcours N4E à l'université d'Angers. Bonne visite à vous !</p>
       </div>
     </div>
   </div>
