--- a/index.html
+++ b/index.html
@@ -66,16 +66,16 @@
      <h2 class="mb-5">Mes projets</h2>
 <ul>
   <li>
-    <h6 class="text-danger">Etude sur les votes en Indre et Loire</h6>
-    <p>Retrouvez un projet sur R créé en 3ème année de licence 
+    <h6 class="text-danger">🗳️ Etude sur les votes en Indre et Loire</h6>
+    <p>Fichier d'études sur les comportements électoraux à l'échelle d'un département. Le vote reste-t-il important aujourd'hui et peut-on dire que la résidence géographique influence ce premier ? Découvrez en cliquant  
     <a href="https://TheoJosephPro.github.io/script_dossier_Bastien_Théo_Illan.html">juste ici</a>.</p>
   </li>
 </ul>
 <ul>
   <li>
-    <h6 class="text-danger">Etude de l'impact de la musique sur la santé mentale</h6>
-    <p>Disponible en cliquant
-    <a href="https://TheoJosephPro.github.io/Projet-R-BARTHELEMY-CALLEGARI-JOSEPH.html">ici</a>.</p>
+    <h6 class="text-danger">👂 Etude de l'impact de la musique sur la santé mentale</h6>
+    <p>La musique serait-elle bénéfique pour notre santé mentale, et le style le plus écouté est-il important pour répondre à cette question ? L'étude est à retrouver en cliquant
+    <a href="https://TheoJosephPro.github.io/Projet-R-BARTHELEMY-CALLEGARI-JOSEPH.html">juste là</a>.</p>
   </li>
 </ul>
     </div>
