--- a/index.html
+++ b/index.html
@@ -82,11 +82,9 @@
     <div class="col-md mb-5">
      <!-- education -->
      <h2 class="mb-5">Présentation</h2>
-<ul>
-  <li>
-    <h6 class="text-danger">Mon CV</h6>
-    <p>Accessible
-    <a href="https://TheoJosephPro.github.io/CV master JOSEPH Théo.pdf">juste ici</a></p>
+    <p>Actuellement en première année de master Economie appliquée parcours Nouveaux environnements et entrepreneuriat éthique (N4E), mon objectif est avant tout de penser l'économie différemment, en imposant les problèmes auxquels notre monde fait actuellemnt face.
+      Vous pouvez découvrir mon expérience actuel grâce à mon CV se trouvant
+    <a href="https://TheoJosephPro.github.io/CV master JOSEPH Théo.pdf">juste ici</a>.</p>
   </li>
 </ul>
     </div>
